syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "BattlePassUnlockStatus.proto";

message BattlePassRewardTag {
	BattlePassUnlockStatus unlock_status = 1;
	uint32 level = 2;
	uint32 reward_id = 3;
}
