// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "BattlePassCycle.proto";
import "BattlePassProduct.proto";
import "BattlePassRewardTag.proto";
import "BattlePassUnlockStatus.proto";

option java_package = "emu.grasscutter.net.proto";

message BattlePassSchedule {
	uint32 level = 14;
	uint32 begin_time = 2;
	uint32 end_time = 15;
	uint32 point = 1;
	BattlePassCycle cur_cycle = 4;
	BattlePassUnlockStatus unlock_status = 7;
	repeated BattlePassRewardTag reward_taken_list = 11;
	uint32 cur_cycle_points = 10;
	uint32 Unk2700_ODHAAHEPFAG = 12;
	BattlePassProduct product_info = 13;
	bool is_extra_paid_reward_taken = 6;
	bool is_viewed = 3;
	uint32 schedule_id = 9;
}
