syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2647
// EnetChannelId: 0
// EnetIsReliable: true
message TakeBattlePassMissionPointRsp {
	int32 retcode = 12;
	repeated uint32 mission_id_list = 2;
}
